# flambe

./: .gitignore  Cargo.toml  readme.md  readme_zh-hans.md  release-plz.toml  tokei_check.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  refactor-request.md
.github/workflows/: ci.yml  release-plz.yml  update-deps.yml
assets/: shaders
doc/: flambe_proposal.md
src/: editor.rs  io.rs  lib.rs  main.rs  sync.rs  ui.rs
src/editor/: project.rs
src/io/: amproj_writer.rs  file_loader.rs  round_trip_tests.rs
src/ui/: fonts.rs  layer_panel.rs  menu_bar.rs  playback.rs  preview.rs  property_panel.rs  theme.rs  timeline.rs
