[package]
name = "flambe"
version = "0.1.0"
edition = "2024"
authors = ["Bli-AIk <haikun2333@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "PC visual editor for Alight Motion projects, powered by bevy_alight_motion"

[dependencies]
bevy = { version = "0.18", features = ["jpeg"] }
bevy_alight_motion = { path = "../bevy_alight_motion" }
bevy-inspector-egui = "0.36.0"
egui = "0.33"
quick-xml = { version = "0.39", features = ["serialize"] }
zip = { version = "7.4", default-features = false, features = ["deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"

[dev-dependencies]
walkdir = "2"

[features]
default = []
