[package]
name = "flambe"
version = "0.0.0"
edition = "2024"
authors = ["Bli-AIk <haikun2333@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bli-AIk/flambe"
readme = "readme.md"
description = "PC visual editor for Alight Motion projects, powered by bevy_alight_motion"
publish = false

[dependencies]
bevy = { version = "0.18", features = ["jpeg"] }
bevy_alight_motion = { version = "0.3.1", path = "../bevy_alight_motion" }
bevy_workbench = { version = "0.1.0", path = "../bevy_workbench" }
bevy_egui = "0.39"
egui = "0.33"
quick-xml = { version = "0.39", features = ["serialize"] }
zip = { version = "8.1", default-features = false, features = ["deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.17"

[dev-dependencies]
walkdir = "2"

[features]
default = []
